syntax = "proto3";

option go_package="api/verification";

message Empty2 {}

service Verification {
  rpc Send(VerificationRequest) returns (SendRequestResponse);
  rpc Approve(ApproveRequest) returns (Empty2);
  rpc Decline(DenialRequest) returns (Empty2);
}

message VerificationRequest {
  string userId = 1;
  string docLink = 2;
}

message SendRequestResponse {
  string requestId = 1;
}

message ApproveRequest {
  string requestId = 1;
}

message DenialRequest {
  string requestId = 1;
  string reason = 2;
}